# buildozer

./: .buildozer.yaml  .gitignore  CLI_LOGGING_SUBCOMMANDS.md  DAEMON_PACKAGE_SUMMARY.md  DEVELOPMENT_PLAN.md  LICENSE  LOGGER_REFACTORING.md  LOGGING_CONFIG_MANAGER_IMPLEMENTATION.md  LOGGING_REFACTORING.md  LOGGING_SERVICE_PROTOCOL.md  Makefile  README.md  RUNTIME_ORGANIZATION_ANALYSIS.md  TESTING.md  TOOLCHAIN_DETECTION.md  buf.gen.yaml  devlog.md  generate.go  go.mod  go.sum  tools.go
.devcontainer/: Dockerfile  README.md  devcontainer.json
cmd/buildozer-client/: main.go
cmd/g++/: main.go  main_test.go  parser_test.go
cmd/gcc/: main.go  main_test.go  parser.go  parser_test.go
examples/: logging_with_age_rotation.go  toolchain_detection.go
examples/cmake_project/: .buildozer  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build.sh
examples/cmake_project/include/: Calculator.hpp  math.h
examples/cmake_project/src/: Calculator.cpp  main_c.c  main_cpp.cpp  math.c
internal/logger/: logger.go
internal/utils/: examples.go  map.go  map_test.go
pkg/cli/: config.go  daemon.go  logger.go  logging.go  peers.go  queue.go  runtime.go
pkg/config/: config.go  logger.go  manager.go  viper_binding.go  viper_binding_test.go
pkg/daemon/: README.md  daemon.go  discovery_service.go  introspection_service.go  job_executor.go  job_manager.go  job_service.go  logger.go  options.go  requester.go  runtime_manager.go  runtime_matcher.go  runtime_service.go  server.go  url.go
pkg/discovery/: mdns.go  types.go
pkg/driver/: driver.go
pkg/drivers/: ARCHITECTURE.md  cli.go  cpp_driver.go  daemon_client.go  driver_cli.go  driver_orchestrator.go  flagparser.go  flagparser_test.go  job_data_staging.go  job_submission.go  logger.go  registry.go  runtime_resolution.go  runtime_resolution_test.go  runtime_resolver.go
pkg/logging/: CONFIG_MANAGER.md  README.md  broadcaster_handler.go  broadcaster_test.go  config.go  config_manager.go  config_manager_test.go  config_validation.go  factory.go  global.go  log_buffer.go  logger.go  logger_test.go  remote_config.go  service_handler.go  (+3 more)
tools/: tools.go
(+127 files in other folders)
